# Textum

./: .gitignore  LICENSE  README.md  README_CN.md  Workflow.md  Workflow_CN.md  Workflow_EN.md
.claude/commands/: backfill.md  prd-check.md  prd-plan.md  prd.md  scaffold-check.md  scaffold.md  split-check.md  split-check1.md  split-check2.md  split-checkout.md  split-plan.md  split.md  story-check.md  story-full-exec.md  story-pack.md  story.md
.codex/skills/textum/scripts/: prd_pack.py  prd_pack_ids.py  prd_pack_io.py  prd_pack_paths.py  prd_pack_placeholders.py  prd_pack_validate.py  prd_pack_validate_access.py  prd_pack_validate_modules.py  prd_pack_validate_project.py  prd_pack_validate_refs.py  prd_pack_validate_rules_api.py  prd_pack_validate_utils.py  prd_render.py  prd_render_i18n.py  prd_render_sections_1_4.py  prd_render_sections_5_7.py  prd_render_sections_8_10.py  prd_render_utils.py  prd_slices.py  prd_slices_generate.py  prd_slices_utils.py  prd_slices_writer.py  pyproject.toml  scaffold_pack.py  scaffold_pack_extract.py  scaffold_pack_io.py  scaffold_pack_placeholders.py  scaffold_pack_validate.py  scaffold_pack_validate_decisions.py  scaffold_pack_validate_extracted.py  scaffold_pack_validate_utils.py  scaffold_render.py  split_check_index_generate.py  split_check_index_io.py  split_check_index_pack.py  split_check_index_replan.py  split_check_index_story.py  split_check_index_thresholds.py  split_check_refs.py  split_check_refs_prd.py  (+42 more)
.codex/skills/textum/scripts/tests/: test_next_routing.py  test_split_bundle_contract.py
.codex/skills/textum/scripts/textum/: prd_pack_validate_modules.py  prd_pack_validate_refs.py  prd_pack_validate_utils.py  prd_render_sections_8_10.py  prd_slices_generate.py  scaffold_pack.py  scaffold_pack_io.py  scaffold_pack_validate_decisions.py  scaffold_render.py  scaffold_render_extract.py  split_check_index_io.py  split_check_index_story.py  split_check_index_thresholds.py  split_check_refs.py  split_check_refs_prd.py  split_checkout.py  split_checkout_io.py  split_pack_io.py  split_pack_placeholders.py  split_plan_pack.py  split_plan_pack_normalize.py  split_plan_pack_validate.py  split_plan_pack_validate_api.py  split_plan_pack_validate_stories.py  split_plan_pack_validate_utils.py  split_story_generate.py  split_story_generate_plan.py  split_story_generate_write.py  split_story_landing.py  split_story_prd.py  story_check_validate_details.py  story_check_validate_internal.py  story_check_validate_meta.py  story_exec_pack.py  story_exec_pack_context.py  story_exec_pack_snapshot.py  story_exec_pack_write.py  story_exec_paths.py  textum_cli_artifacts.py  textum_cli_next.py  (+23 more)
.codex/skills/textum/scripts/textum/prd/: prd_pack_paths.py  prd_render_i18n.py
.codex/skills/textum/scripts/textum/scaffold/: scaffold_pack_placeholders.py  scaffold_pack_validate.py  scaffold_pack_validate_extracted.py  scaffold_pack_validate_utils.py  scaffold_render_emit.py
.codex/skills/textum/scripts/textum/split/: split_check_index_generate.py  split_check_index_thresholds.py  split_check_refs.py  split_check_refs_scaffold.py  split_check_refs_validate_against.py  split_checkout_graph.py  split_plan_pack_validate_stories.py  split_plan_pack_validate_story_row.py  split_story_landing.py
.codex/skills/textum/scripts/textum/story/: story_check.py  story_check_utils.py  story_check_validate_external.py  story_check_validate_refs.py  story_exec_pack_validate.py  story_exec_pack_write.py  story_exec_pack_write_index.py
simulate-test-reports/: beta-simulate-test-report-opus_CN.md  beta-simulate-test-report-opus_EN.md  e2e-run-1.1_CN.md  e2e-run-1.3_CN.md  e2e-run-1.3_EN.md  e2e-run-1.5_CN.md  e2e-run-1.5_EN.md  e2e-run-20260116_CN.md  e2e-run-20260116_EN.md  e2e-run-20260117_EN.md  e2e-run-20260118_EN.md  v2simulate-test-report-opus_CN.md  v2simulate-test-report-opus_EN.md  v3simulate-test-report-opus_CN.md  v3simulate-test-report-opus_EN.md  v4simulate-test-report-opus.md  v4simulate-test-report-opus_EN.md  v5simulate-test-report-opus.md  v5simulate-test-report-opus_EN.md  v6simulate-test-report-opus.md  v6simulate-test-report-opus_EN.md
(+72 files in other folders)
