[project]
name = "textum"
version = "0.0.0"
description = "Textum workflow"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
textum = "textum_cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
  "textum_cli",
  "prd_pack",
  "prd_pack_ids",
  "prd_pack_io",
  "prd_pack_paths",
  "prd_pack_placeholders",
  "prd_pack_types",
  "prd_slices",
  "prd_slices_generate",
  "prd_slices_types",
  "prd_slices_utils",
  "prd_pack_validate",
  "prd_pack_validate_access",
  "prd_pack_validate_modules",
  "prd_pack_validate_project",
  "prd_pack_validate_rules_api",
  "prd_pack_validate_utils",
  "scaffold_pack",
  "scaffold_pack_extract",
  "scaffold_pack_io",
  "scaffold_pack_placeholders",
  "scaffold_pack_types",
  "scaffold_pack_validate",
  "scaffold_pack_validate_decisions",
  "scaffold_pack_validate_extracted",
  "scaffold_pack_validate_utils",
  "scaffold_render",
  "prd_render",
  "prd_render_i18n",
  "prd_render_sections_1_4",
  "prd_render_sections_5_7",
  "prd_render_sections_8_10",
  "prd_render_utils",
]
