[project]
name = "textum"
version = "0.0.0"
description = "Textum workflow"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
textum = "textum_cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
  "textum_cli",
  "textum_cli_support",
  "textum_cli_next",
  "textum_cli_prd",
  "textum_cli_scaffold",
  "textum_cli_split",
  "textum_cli_split_plan",
  "textum_cli_split_generate",
  "textum_cli_split_checks",
  "textum_cli_story",
  "prd_pack",
  "prd_pack_ids",
  "prd_pack_io",
  "prd_pack_maps",
  "prd_pack_paths",
  "prd_pack_placeholders",
  "prd_pack_types",
  "prd_slices",
  "prd_slices_generate",
  "prd_slices_types",
  "prd_slices_utils",
  "prd_slices_writer",
  "prd_pack_validate",
  "prd_pack_validate_access",
  "prd_pack_validate_modules",
  "prd_pack_validate_project",
  "prd_pack_validate_refs",
  "prd_pack_validate_rules_api",
  "prd_pack_validate_utils",
  "scaffold_pack",
  "scaffold_pack_extract",
  "scaffold_pack_io",
  "scaffold_pack_placeholders",
  "scaffold_pack_types",
  "scaffold_pack_validate",
  "scaffold_pack_validate_decisions",
  "scaffold_pack_validate_extracted",
  "scaffold_pack_validate_utils",
  "scaffold_render",
  "prd_render",
  "prd_render_i18n",
  "prd_render_sections_1_4",
  "prd_render_sections_5_7",
  "prd_render_sections_8_10",
  "prd_render_utils",
  "split_pack_types",
  "split_pack_io",
  "split_pack_placeholders",
  "split_plan_pack",
  "split_plan_pack_normalize",
  "split_plan_pack_validate",
  "split_plan_pack_validate_utils",
  "split_plan_pack_validate_stories",
  "split_plan_pack_validate_api",
  "split_story_paths",
  "split_story_prd",
  "split_story_landing",
  "split_story_generate",
  "split_check_index_pack",
  "split_check_index_generate",
  "split_check_index_story",
  "split_check_index_io",
  "split_check_index_replan",
  "split_check_index_thresholds",
  "split_thresholds",
  "split_check_refs",
  "split_check_refs_prd",
  "split_check_refs_scaffold",
  "split_checkout",
  "story_check",
  "story_check_utils",
  "story_check_validate_details",
  "story_check_validate_meta",
  "story_check_validate_refs",
  "story_check_validate_internal",
  "story_check_validate_external",
  "story_exec_types",
  "story_exec_paths",
  "story_exec_pack",
  "story_exec_pack_context",
  "story_exec_pack_utils",
  "story_exec_pack_write",
  "story_exec_pack_validate",
]
